--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,9 +5,108 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #dee3e5;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 20px;
+  width: 100%;
+  padding: 0 40px;
+}
+
+.nav {
+  justify-content: space-around;
+  gap: 50px;
+}
+
+.btn {
+  border-radius: 3px;
+  background-color: #39b3e5;
+  margin: 3px;
+}
+
+.hero-section {
+  text-align: center;
+}
+
+.my-favs-header {
+  display: flex;
+  flex-direction: row;
+  gap: 200px;
+  justify-content: center;
+}
+
+.my-favs {
+  margin: 40px;
+  width: 100%;
+  padding: 50px;
+}
+
+footer {
+  text-align: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 auto;
+  background-color: #cebbdd;
+  width: 300px;
+  height: 400px;
+  flex-wrap: wrap;
+  border-radius: 5px;
+  margin: 10px;
+  border: 1px #fff;
+ 
+}
+
+.card--details {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-left: 10px;
+}
+
+.card--btn {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.card--image {
+  height: 55%;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.desc {
+  margin-left: 10px;
+}
+
+.cards--section {
+  display: flex;
+  flex-direction: row;
+  overflow: auto;
+  flex-wrap: wrap;
+}
+
+.red {
+  background-color: red;
 }
